; ModuleID = '/home/carl/AnghaBench/nanomsg/src/utils/extr_msg.c_nn_msg_cp.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/utils/extr_msg.c_nn_msg_cp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_msg = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_msg_cp(%struct.nn_msg* %0, %struct.nn_msg* %1) #0 {
  %3 = alloca %struct.nn_msg*, align 8
  %4 = alloca %struct.nn_msg*, align 8
  store %struct.nn_msg* %0, %struct.nn_msg** %3, align 8
  store %struct.nn_msg* %1, %struct.nn_msg** %4, align 8
  %5 = load %struct.nn_msg*, %struct.nn_msg** %3, align 8
  %6 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %5, i32 0, i32 2
  %7 = load %struct.nn_msg*, %struct.nn_msg** %4, align 8
  %8 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %7, i32 0, i32 2
  %9 = call i32 @nn_chunkref_cp(i32* %6, i32* %8)
  %10 = load %struct.nn_msg*, %struct.nn_msg** %3, align 8
  %11 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %10, i32 0, i32 1
  %12 = load %struct.nn_msg*, %struct.nn_msg** %4, align 8
  %13 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %12, i32 0, i32 1
  %14 = call i32 @nn_chunkref_cp(i32* %11, i32* %13)
  %15 = load %struct.nn_msg*, %struct.nn_msg** %3, align 8
  %16 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %15, i32 0, i32 0
  %17 = load %struct.nn_msg*, %struct.nn_msg** %4, align 8
  %18 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %17, i32 0, i32 0
  %19 = call i32 @nn_chunkref_cp(i32* %16, i32* %18)
  ret void
}

declare dso_local i32 @nn_chunkref_cp(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
